# keeper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
data/: 18143850.jsonl  18198205-portugal-spain.jsonl  18209181-france-morocco.jsonl  18213979-norway-england.jsonl  18218149-spain-belgium.jsonl  18222446-argentina-switzerland.jsonl  18237038-france-spain.jsonl  18241006-england-argentina.jsonl  18257739.jsonl  18257865-france-england.jsonl  18257865.jsonl  anchors.jsonl  events.jsonl  sample-match.jsonl
docs/: BACKTEST.md  CONTRACTS-WAVE2.md  DEMO-SCRIPT.md  DEMO.md  FEEDBACK.md  MODEL.md  SUBMISSION.md  TXLINE.md
fixtures/: book-18241006-devnet.json  fixtures-day20649.json  fixtures-wc.json  odds-snapshot-18257865.json  proof_18241006_seq425_halftime_k1-2.json  proof_18241006_seq962_k1-2.json
program/: Anchor.toml
program/idl/: keeper_book.json
program/programs/keeper_book/: Cargo.toml
program/programs/keeper_book/src/: lib.rs
scripts/: backtest.ts  close-book.ts  export-wallet.ts  fetch-recording.ts  gen-synthetic.ts  init-book.ts  settle-book.ts  show-book.ts  stats.ts  trim-recording.ts  verify-anchors.ts  verify-txline-proof.ts  wallet.ts
src/: bus.ts  config.ts  index.ts  log.ts  types.ts
src/chain/: anchorer.test.ts  anchorer.ts  book.test.ts  book.ts  merkle.test.ts  merkle.ts  settle.test.ts  settle.ts  txproof.test.ts  txproof.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
worker/: index.ts
(+48 files in other folders)
